# TalentIQ

./: benchmark_report.csv  benchmark_report.json  benchmark_report.md  index.html  package-lock.json  package.json  ranking_quality_report.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  candidates.py  files.py  health.py
backend/app/models/: analysis.py  analytics.py  base.py  common.py  explainability.py  file.py  jd.py  resume.py  scoring.py  semantic.py
backend/app/services/: analysis_job.py  analytics_service.py  embedding.py  explainability_service.py  export_service.py  gemini_parser.py  gemini_resume_parser.py  jd_profile.py  pdf_extractor.py  ranking_service.py  resume_profile.py  scoring_service.py  semantic_profile.py  storage.py  upload.py  vector.py
backend/app/store/: __init__.py  memory.py
backend/app/utils/: helpers.py
backend/tests/: test_analytics.py  test_e2e_integration.py  test_embeddings.py  test_explainability.py  test_exports.py  test_foundation.py  test_jd_parsing.py  test_ranking.py  test_resume_parsing.py  test_scoring.py  test_vector.py
src/: App.jsx  index.css
src/data/: mockData.json
src/pages/: AnalyzingLoader.jsx  CandidateComparison.jsx  CandidateProfile.jsx  ExportCenter.jsx  HiringReport.jsx  LoginPage.jsx  PipelineResults.jsx  SkillGapAnalytics.jsx  SourcingDashboard.jsx
src/utils/: api.js
(+4 files in other folders)
